# raggie

./: .gitignore  CONVENTIONS.md  MIGRATIONS.md  REFACTORING.md  Rules of exception handling briefy.md  conftest.py  docker-compose.yml  pg_vector_doc.md  pyproject.toml  pyrightconfig.json  requirements.txt
api_app/: .gitignore  __init__.py  build_and_run.sh  config.py  test_api.py
api_app/api/: __init__.py  deps.py
api_app/schemas/: __init__.py
api_app/services/: ai_provider.py  chat_service.py  db_service.py
api_app/utils/: session_manager.py
celery_app/: __init__.py  config.py
docker/: Dockerfile.api  Dockerfile.model
model_app/: .env-example  alembic.ini  app.py  requirements.txt
model_app/commands/: chat.py  clear_data.py  create_db.py  import_data.py
model_app/core/: document_reader.py  embedding.py  llm.py  rag.py  rag_config.py  rag_exceptions.py  rag_service.py  text_chunker.py  text_chunker_service.py  vector_store.py
model_app/db/: db.py  migrations.py
model_app/migrations/: env.py  script.py.mako
model_app/migrations/versions/: 4e03b8201a3e_rename_document_class.py  87299049816b_initial_migration.py  88fcc77714e2_something_changed.py  993abf7ca524_deleted_embedding_field_from_document_.py
model_app/tasks/: __init__.py  text_to_embedings_task.py
model_app/utils/: logging_decorators.py
recovery_project/app/api_app/: .env-example  LICENSE  README.md  (+4 more)
tests/model_app/: test_document_reader.py  test_embedding.py  test_embedding_service.py  test_embedding_task.py  test_rag_service.py  test_text_chunker.py  test_text_chunker_service.py
(+14 files in other folders)
