[tool.poetry]
name = "rag-app"
version = "0.1.0"
description = "RAG application with FastAPI and Celery"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
celery = "^5.3.6"
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
numpy = "^1.26.3"
pgvector = "^0.2.0"
langchain = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
